[package]
name = "viscron"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies]
delay_timer = "0.10.1"
tokio = { version = "^1.3.0", features = ["full"] }
futures = "*"
anyhow = "^1.0.31"
smol = "^1.2.5"
config = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log4rs = { version = "*", features = ["gzip"] }
log = "*"
etcd-rs = "*"
etcd-client = "*"
# systemstat = "*"
hostname = "*"
users = "*"